@@ -1,5 +1,10 @@
 2007-08-03  Calvin Gaisford <calvinrg@gmail.com> 
 
+	* Banter/PersonCard.cs: Removed the users controls when they are in the
+	  process of being removed
+
+2007-08-03  Calvin Gaisford <calvinrg@gmail.com> 
+
 	* Banter/ProviderUser.cs: Updated exceptions to state the actual
 	  problem
 	* Banter/PersonCard.cs: Added calls to RevokeInvitations and remove
